# range-doppler-processor

./: .gitignore  CMakeLists.txt  README.md  changelog.txt  rdp.geany  summary.ini
imu_processor/: imu_parser.m
matlab_validation/: fmcw_coho_proc.m  get_frac_num.m  get_vco.m  milosar_processor.m  phase_unwrapping.m  ramp_mixing.m  vco_simulator.m
qt-port/: colour.cpp  colour.h  convertUTF.c  logger.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.h.autosave  mainwindow.ui  plot.cpp  plot.h  processor.cpp  processor.h  qt-port.pro  simpleIni.h  taper.cpp  taper.h  timer.cpp  timer.h
qt-port-release/: moc_mainwindow.cpp  qt-port  ui_mainwindow.h
source/: includes.h  logger.cpp  logger.h  main.cpp  plot.cpp  plot.h  processor.cpp  processor.h  taper.cpp  taper.h  timer.cpp  timer.h
